[package]
name = "aura-amp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
include = ["src/**", "Cargo.toml"]

[lints]
workspace = true

[features]
default = ["demo-crypto"]
# Enable demo XOR-based encryption for simulation/testing (NOT for production)
demo-crypto = []
# Enable simulation mode for deterministic testing with aura-simulator.
# Provides access to simulation-specific effect traits and handlers.
simulation = ["aura-core/simulation"]

[dependencies]
# Workspace crates
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-effects = { path = "../aura-effects", version = "0.1.0" }
aura-journal = { path = "../aura-journal", version = "0.1.0" }
aura-transport = { path = "../aura-transport", version = "0.1.0" }
aura-consensus = { path = "../aura-consensus", version = "0.1.0" }
aura-guards = { path = "../aura-guards", version = "0.1.0" }
aura-macros = { path = "../aura-macros", version = "0.1.0" }
aura-mpst = { path = "../aura-mpst", version = "0.1.0" }
telltale = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

futures = { workspace = true }
[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
