[package]
name = "hxrts-aura-amp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aura Messaging Protocol: reliable async messaging with acknowledgment and ordering"
include = ["src/**", "Cargo.toml"]

[lib]
name = "aura_amp"
[lints]
workspace = true

[features]
default = []
simulation = ["aura-core/simulation"]

[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-effects = { package = "hxrts-aura-effects", path = "../aura-effects", version = "=0.2.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.2.0" }
aura-transport = { package = "hxrts-aura-transport", path = "../aura-transport", version = "=0.2.0" }
aura-consensus = { package = "hxrts-aura-consensus", path = "../aura-consensus", version = "=0.2.0" }
aura-guards = { package = "hxrts-aura-guards", path = "../aura-guards", version = "=0.2.0" }
aura-macros = { package = "hxrts-aura-macros", path = "../aura-macros", version = "=0.2.0" }
aura-mpst = { package = "hxrts-aura-mpst", path = "../aura-mpst", version = "=0.2.0" }
telltale = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
