[package]
name = "aura-analysis-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
# Internal crates
aura-console-types = { path = "../aura-console-types" }
aura-types = { path = "../aura-types" }
wasm_core = { path = "../aura-wasm" }
quint_api = { path = "../aura-quint-api", package = "aura-quint-api" }

# WASM and web APIs
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "PerformanceEntry",
  "Window",
] }

# Serialization and trace parsing
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

# Data structures
indexmap = "2.0"
petgraph = "0.6"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging for WASM
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# UUID support for WASM
uuid = { workspace = true, features = ["js"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Note: Profile settings moved to workspace root Cargo.toml
