[package]
name = "hxrts-aura-anti-entropy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Journal anti-entropy and fact synchronization for Aura"

[lib]
name = "aura_anti_entropy"
[lints]
workspace = true

[features]
default = []
simulation = ["aura-core/simulation"]

[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.1.0" }
aura-guards = { package = "hxrts-aura-guards", path = "../aura-guards", version = "=0.1.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.1.0" }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

async-trait = { workspace = true }
async-lock = "3.0"

uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
