[package]
name = "aura-app"
version = "0.1.0"
edition = "2021"
description = "Portable headless application core for Aura"
license = "Apache-2.0"
repository = "https://github.com/aura-org/aura"

[features]
default = []

# =============================================================================
# Platform Features
# =============================================================================

# Native Rust consumers (aura-terminal, tests)
# Enables futures-signals API for fine-grained reactivity
native = ["signals"]

# iOS via UniFFI → Swift
# Generates Swift bindings, uses callback-based reactivity
ios = ["uniffi", "mobile"]

# Android via UniFFI → Kotlin
# Generates Kotlin bindings, uses callback-based reactivity
android = ["uniffi", "mobile"]

# Shared mobile configuration
mobile = ["uniffi", "callbacks"]

# Web via wasm-bindgen → JavaScript/TypeScript
# For vanilla JS/TS consumers (React, Vue, etc.)
web-js = ["wasm"]

# Web via dominator (pure Rust WASM)
# For Rust-based web apps using futures-signals
web-dominator = ["wasm", "signals", "dep:dominator"]

# =============================================================================
# API Style Features (internal - use platform features above)
# =============================================================================

# Enable futures-signals based reactivity
# Used by: native, web-dominator
# Also enables tokio for signal forwarding tasks
signals = ["dep:futures-signals"]

# Enable callback-based reactivity (StateObserver trait)
# Used by: ios, android, web-js
callbacks = []

# =============================================================================
# Internal API Surface
# =============================================================================

# Enable low-level mutation/dispatch APIs intended for non-UI callers.
app-internals = []

# =============================================================================
# FFI Features
# =============================================================================

# UniFFI for native mobile bindings
uniffi = ["dep:uniffi", "callbacks"]

# WASM for web targets
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]

# =============================================================================
# Development Features
# =============================================================================

# Enable tracing/logging instrumentation
instrumented = ["dep:tracing"]

# Serialize intents/state for debugging
debug-serialize = []

# Host binding stub for downstream integrations (iOS/Swift, etc.)
host = ["dep:anyhow"]

[[bin]]
name = "app-host"
path = "src/bin/app_host.rs"
required-features = ["host"]

# =============================================================================
# Dependencies
# =============================================================================
# Architecture note: This crate is PURE - no runtime layer dependencies.
# The agent layer depends on this crate (dependency inversion pattern).
# Frontends import app types from here, runtime types from the agent layer.

[dependencies]
# Core Aura crates
aura-core = { path = "../aura-core" }
aura-effects = { path = "../aura-effects" }
aura-composition = { path = "../aura-composition" }
aura-journal = { path = "../aura-journal" }
aura-relational = { path = "../aura-relational" }
aura-chat = { path = "../aura-chat" }
aura-social = { path = "../aura-social" }
aura-maintenance = { path = "../aura-maintenance" }
aura-protocol = { path = "../aura-protocol" }
aura-recovery = { path = "../aura-recovery" }
aura-macros = { path = "../aura-macros" }

# Always required
serde = { version = "1", features = ["derive"] }
thiserror = "2"
cfg-if = "1"
uuid = { version = "1.6", features = ["v4"] }
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"

# Runtime-agnostic async primitives (no tokio/async-std coupling)
async-lock = "3"

# Optional: Signals-based reactivity
futures-signals = { version = "0.3", optional = true }

# Optional: Async runtime for signal forwarding (signals feature)
tokio = { workspace = true }
futures = { version = "0.3" }
parking_lot = { workspace = true }

# Optional: FFI for mobile
uniffi = { version = "0.25", optional = true }

# Optional: WASM for web
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Location", "Window", "WorkerGlobalScope"] }
console_error_panic_hook = { version = "0.1", optional = true }

# Optional: dominator for Rust web apps
dominator = { version = "0.5", optional = true }

# Optional: Development
tracing = { version = "0.1", optional = true }

# Required for journal persistence
serde_json = "1"

# Optional: Host binding stub
anyhow = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific async runtime
wasm-bindgen-futures = "0.4"
# Use browser crypto instead of ring
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"], optional = true }

[dev-dependencies]
futures = { workspace = true }
proptest = { workspace = true }
trybuild = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
