[package]
name = "hxrts-aura-app"
version = "0.2.0"
edition = "2021"
description = "Portable headless application core for Aura"
license = "Apache-2.0"
repository = "https://github.com/aura-org/aura"
homepage.workspace = true

[lib]
name = "aura_app"
[features]
default = []

# Platform Features

native = ["signals"]
ios = ["uniffi", "mobile"]
android = ["uniffi", "mobile"]
mobile = ["uniffi", "callbacks"]
web-js = ["wasm"]
web-dominator = ["wasm", "signals", "dep:dominator"]

# API Style Features

signals = ["dep:futures-signals"]
callbacks = []

# Internal API Surface

app-internals = []

# FFI Features

uniffi = ["dep:uniffi", "callbacks"]
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]

# Development Features

instrumented = ["dep:tracing"]
debug-serialize = []
host = ["dep:anyhow"]

[[bin]]
name = "app-host"
path = "src/bin/app_host.rs"
required-features = ["host"]

[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-effects = { package = "hxrts-aura-effects", path = "../aura-effects", version = "=0.2.0" }
aura-composition = { package = "hxrts-aura-composition", path = "../aura-composition", version = "=0.2.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.2.0" }
aura-relational = { package = "hxrts-aura-relational", path = "../aura-relational", version = "=0.2.0" }
aura-chat = { package = "hxrts-aura-chat", path = "../aura-chat", version = "=0.2.0" }
aura-social = { package = "hxrts-aura-social", path = "../aura-social", version = "=0.2.0" }
aura-maintenance = { package = "hxrts-aura-maintenance", path = "../aura-maintenance", version = "=0.2.0" }
aura-protocol = { package = "hxrts-aura-protocol", path = "../aura-protocol", version = "=0.2.0" }
aura-recovery = { package = "hxrts-aura-recovery", path = "../aura-recovery", version = "=0.2.0" }
aura-macros = { package = "hxrts-aura-macros", path = "../aura-macros", version = "=0.2.0" }

serde = { version = "1", features = ["derive"] }
thiserror = "2"
cfg-if = "1"
uuid = { version = "1.6", features = ["v4"] }
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
async-lock = "3"
futures-signals = { version = "0.3", optional = true }
tokio = { workspace = true }
futures = { version = "0.3" }
parking_lot = { workspace = true }
serde_json = "1"

uniffi = { version = "0.25", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Location", "Window", "WorkerGlobalScope"] }
console_error_panic_hook = { version = "0.1", optional = true }
dominator = { version = "0.5", optional = true }
tracing = { version = "0.1", optional = true }
anyhow = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"], optional = true }

[dev-dependencies]
futures = { workspace = true }
proptest = { workspace = true }
trybuild = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
