[package]
name = "hxrts-aura-app"
version = "0.2.0"
edition = "2021"
description = "Portable headless application core for Aura"
license = "Apache-2.0"
repository = "https://github.com/aura-org/aura"
homepage.workspace = true

[lib]
name = "aura_app"
[features]
default = []

# Platform Features

native = ["signals"]
ios = ["uniffi", "mobile"]
android = ["uniffi", "mobile"]
mobile = ["uniffi", "callbacks"]
web-js = ["wasm"]
web-dominator = ["wasm", "signals", "dep:dominator"]

# API Style Features

signals = ["dep:futures-signals"]
callbacks = []

# Internal API Surface

app-internals = []

# FFI Features

uniffi = ["dep:uniffi", "callbacks"]
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]

# Development Features

instrumented = ["dep:tracing"]
debug-serialize = []
host = ["dep:anyhow"]

[[bin]]
name = "app-host"
path = "src/bin/app_host.rs"
required-features = ["host"]

[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-effects = { package = "hxrts-aura-effects", path = "../aura-effects", version = "=0.2.0" }
aura-composition = { package = "hxrts-aura-composition", path = "../aura-composition", version = "=0.2.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.2.0" }
aura-relational = { package = "hxrts-aura-relational", path = "../aura-relational", version = "=0.2.0" }
aura-chat = { package = "hxrts-aura-chat", path = "../aura-chat", version = "=0.2.0" }
aura-social = { package = "hxrts-aura-social", path = "../aura-social", version = "=0.2.0" }
aura-maintenance = { package = "hxrts-aura-maintenance", path = "../aura-maintenance", version = "=0.2.0" }
aura-protocol = { package = "hxrts-aura-protocol", path = "../aura-protocol", version = "=0.2.0" }
aura-recovery = { package = "hxrts-aura-recovery", path = "../aura-recovery", version = "=0.2.0" }
aura-macros = { package = "hxrts-aura-macros", path = "../aura-macros", version = "=0.2.0" }

serde = { workspace = true }
thiserror = { workspace = true }
cfg-if = "1"
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-lock = { workspace = true }
futures-signals = { workspace = true, optional = true }
tokio = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }

uniffi = { version = "0.25", optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console", "Location", "Window", "WorkerGlobalScope"] }
console_error_panic_hook = { version = "0.1", optional = true }
dominator = { version = "0.5", optional = true }
tracing = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
getrandom = { workspace = true }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"], optional = true }

[dev-dependencies]
futures = { workspace = true }
proptest = { workspace = true }
trybuild = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
