[package]
name = "aura-authenticate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-crypto = { path = "../aura-crypto" }
aura-mpst = { path = "../aura-mpst" }
aura-verify = { path = "../aura-verify" }
aura-wot = { path = "../aura-wot" }
rumpsteak-aura = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
