[package]
name = "aura-authenticate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-crypto = { path = "../aura-crypto" }
aura-effects = { path = "../aura-effects" }
aura-protocol = { path = "../aura-protocol" }
aura-verify = { path = "../aura-verify" }
aura-wot = { path = "../aura-wot" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
