[package]
name = "aura-authenticate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-effects = { path = "../aura-effects" }
aura-macros = { path = "../aura-macros" }
aura-mpst = { path = "../aura-mpst" }
aura-protocol = { path = "../aura-protocol" }
aura-verify = { path = "../aura-verify" }
aura-wot = { path = "../aura-wot" }

# Choreography dependencies (required by aura-macros)
rumpsteak-aura-choreography = "0.6.0"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
biscuit-auth = { workspace = true }

[dev-dependencies]
# Testing infrastructure (Layer 5 can use testkit)
aura-testkit = { path = "../aura-testkit" }
tokio = { workspace = true }

[lints]
workspace = true
