[package]
name = "aura-authentication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-effects = { path = "../aura-effects" }
aura-journal = { path = "../aura-journal" }
aura-macros = { path = "../aura-macros" }
aura-mpst = { path = "../aura-mpst" }
aura-protocol = { path = "../aura-protocol" }
aura-guards = { path = "../aura-guards" }
aura-relational = { path = "../aura-relational" }
aura-signature = { path = "../aura-signature" }
aura-authorization = { path = "../aura-authorization" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

# Choreography dependencies (required by aura-macros)
rumpsteak-aura-choreography = "0.7.0"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
biscuit-auth = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
# Testing infrastructure (Layer 5 can use testkit)
aura-agent = { path = "../aura-agent" }
aura-testkit = { path = "../aura-testkit", features = ["full-effect-system"] }
tokio = { workspace = true }

[lints]
workspace = true
