[package]
name = "hxrts-aura-authentication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Authentication protocols and identity verification for Aura"
include = ["src/**", "Cargo.toml"]

[lib]
name = "aura_authentication"
[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.1.0" }
aura-effects = { package = "hxrts-aura-effects", path = "../aura-effects", version = "=0.1.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.1.0" }
aura-macros = { package = "hxrts-aura-macros", path = "../aura-macros", version = "=0.1.0" }
aura-mpst = { package = "hxrts-aura-mpst", path = "../aura-mpst", version = "=0.1.0" }
aura-protocol = { package = "hxrts-aura-protocol", path = "../aura-protocol", version = "=0.1.0" }
aura-guards = { package = "hxrts-aura-guards", path = "../aura-guards", version = "=0.1.0" }
aura-relational = { package = "hxrts-aura-relational", path = "../aura-relational", version = "=0.1.0" }
aura-signature = { package = "hxrts-aura-signature", path = "../aura-signature", version = "=0.1.0" }
aura-authorization = { package = "hxrts-aura-authorization", path = "../aura-authorization", version = "=0.1.0" }

async-trait = { workspace = true }
bincode = { workspace = true }
biscuit-auth = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
telltale = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
