[package]
name = "hxrts-aura-authorization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Capability-based authorization for Aura"
repository.workspace = true
homepage.workspace = true

[lib]
name = "aura_authorization"
[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.1.0" }
aura-macros = { package = "hxrts-aura-macros", path = "../aura-macros", version = "=0.1.0" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
biscuit-auth = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
