[package]
name = "aura-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace crates
aura-protocol = { path = "../aura-protocol" }
aura-core = { path = "../aura-core" }
aura-mpst = { path = "../aura-mpst" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

# Async
async-trait = { workspace = true }
async-lock = "3.0"

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Testing infrastructure
tokio = { workspace = true }
