# Aura Chat - Secure Messaging Layer
[package]
name = "aura-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Secure chat functionality for the Aura threshold identity platform"
keywords = ["chat", "messaging", "secure", "amp", "authority"]
categories = ["cryptography"]

[lints]
workspace = true

[dependencies]
# Core traits (interface layer)
aura-core = { path = "../aura-core" }

# Journal for domain fact types
aura-journal = { path = "../aura-journal" }

# Proc-macros for DomainFact derives
aura-macros = { path = "../aura-macros" }

# Effect handler composition utilities (for ViewDeltaReducer)
aura-composition = { path = "../aura-composition" }

# Guard-chain shared helpers
aura-guards = { path = "../aura-guards" }

# Session types and choreography

# Transport layer for AMP protocol

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# For testing
tokio = { workspace = true }

[features]
default = []
