[package]
name = "aura-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Secure chat functionality for the Aura threshold identity platform"
keywords = ["chat", "messaging", "secure", "amp", "authority"]
categories = ["cryptography"]

[dependencies]
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-journal = { path = "../aura-journal", version = "0.1.0" }
aura-macros = { path = "../aura-macros", version = "0.1.0" }
aura-composition = { path = "../aura-composition", version = "0.1.0" }
aura-guards = { path = "../aura-guards", version = "0.1.0" }

serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
default = []

[lints]
workspace = true
