[package]
name = "hxrts-aura-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Secure chat functionality for the Aura threshold identity platform"
keywords = ["chat", "messaging", "secure", "amp", "authority"]
categories = ["cryptography"]

[lib]
name = "aura_chat"
[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.2.0" }
aura-macros = { package = "hxrts-aura-macros", path = "../aura-macros", version = "=0.2.0" }
aura-composition = { package = "hxrts-aura-composition", path = "../aura-composition", version = "=0.2.0" }
aura-guards = { package = "hxrts-aura-guards", path = "../aura-guards", version = "=0.2.0" }

serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
default = []

[dev-dependencies]
aura-testkit = { package = "aura-testkit", path = "../aura-testkit" }

[lints]
workspace = true
