[package]
name = "aura-choreography"
version = "0.1.0"
edition = "2021"
description = "Concrete choreographic protocol implementations for Aura"
license = "MIT OR Apache-2.0"

[dependencies]
# Core Aura dependencies
aura-protocol = { path = "../aura-protocol" }
aura-types = { path = "../aura-types" }
aura-crypto = { path = "../aura-crypto" }
aura-journal = { path = "../aura-journal" }
aura-messages = { path = "../aura-messages" }

# Choreographic programming
rumpsteak-aura = { git = "https://github.com/hxrts/rumpsteak-aura" }
rumpsteak-choreography = { git = "https://github.com/hxrts/rumpsteak-aura" }

# Cryptography
frost-ed25519 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Async and concurrency
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
blake3 = "1.5"
automerge = "0.5"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"
aura-test-utils = { path = "../aura-test-utils" }
aura-simulator = { path = "../aura-simulator" }

[features]
default = ["test-utils"]
test-utils = []
simulation = []