# CLI for smoke tests and operator tooling
[package]
name = "aura-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
# Workspace crates
aura-agent = { path = "../agent" }
aura-authentication = { path = "../aura-authentication" }
aura-protocol = { path = "../aura-protocol" }
aura-crypto = { path = "../aura-crypto" }
aura-journal = { path = "../aura-journal" }
aura-simulator = { path = "../aura-simulator" }
aura-transport = { path = "../aura-transport" }
aura-types = { path = "../aura-types" }
# session_types removed during refactor - implementation moved to coordination

# CLI
clap = { workspace = true }
toml = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
frost-ed25519 = { workspace = true }
blake3 = { workspace = true }
dirs = "5.0"

[features]
default = []
dev-console = ["aura-agent/dev-console"]
