# CLI for smoke tests and operator tooling
[package]
name = "aura-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
# Workspace crates
aura-protocol = { path = "../aura-protocol" }
aura-core = { path = "../aura-core" }
aura-agent = { path = "../aura-agent" }
aura-recovery = { path = "../aura-recovery" }
aura-invitation = { path = "../aura-invitation" }
aura-authenticate = { path = "../aura-authenticate" }

# Effect system
async-trait = { workspace = true }

# CLI
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async
tokio = { workspace = true }

# Other dependencies
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
# Testing infrastructure (Layer 7 can use testkit)
aura-testkit = { path = "../aura-testkit" }

[features]
default = []
