# CLI for smoke tests and operator tooling
[package]
name = "aura-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
# Workspace crates
aura-protocol = { path = "../aura-protocol" }
aura-core = { path = "../aura-core" }
aura-agent = { path = "../aura-agent" }
aura-recovery = { path = "../aura-recovery" }
aura-invitation = { path = "../aura-invitation" }
aura-authenticate = { path = "../aura-authenticate" }
aura-sync = { path = "../aura-sync" }
aura-effects = { path = "../aura-effects" }
aura-wot = { path = "../aura-wot" }
aura-chat = { path = "../aura-chat" }
aura-journal = { path = "../aura-journal" }
aura-relational = { path = "../aura-relational" }
aura-store = { path = "../aura-store" }

# Optional development dependencies - only included with "development" feature
aura-simulator = { path = "../aura-simulator", optional = true }
aura-testkit = { path = "../aura-testkit", optional = true, features = ["full-effect-system"] }

# Effect system
async-trait = { workspace = true }

# CLI
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async
tokio = { workspace = true }

# Other dependencies
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
biscuit-auth = { workspace = true }

[dev-dependencies]
# Testing infrastructure (Layer 7 can use testkit with full effect system)
aura-testkit = { path = "../aura-testkit", features = ["full-effect-system"] }
aura-macros = { path = "../aura-macros" }
tempfile = { workspace = true }

[features]
default = []
# Development mode includes demo orchestration, simulator, and testkit
# Build with: cargo build --features development
development = [
    "dep:aura-simulator",
    "dep:aura-testkit",
]
