[package]
name = "aura-composition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aura Layer 3: Handler composition and effect system assembly"

[dependencies]
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-effects = { path = "../aura-effects", version = "0.1.0" }
aura-mpst = { path = "../aura-mpst", version = "0.1.0" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
bincode = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
cfg-if = "1"

# No dev-dependencies - Layer 3 crates should use internal test utilities
# to avoid circular dependencies with aura-testkit (Layer 8)
