[package]
name = "hxrts-aura-composition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aura Layer 3: Handler composition and effect system assembly"

[lib]
name = "aura_composition"
[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.1.0" }
aura-effects = { package = "hxrts-aura-effects", path = "../aura-effects", version = "=0.1.0" }
aura-mpst = { package = "hxrts-aura-mpst", path = "../aura-mpst", version = "=0.1.0" }

async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
cfg-if = "1"
